# kubernetes-learning

./: Dockerfile  Dockerfile.performance  deployment.yaml  pyproject.toml  service.yaml
kub/: main.py
tests/: locust_test.py
