[tool.poetry]
name = "kub"
version = "0.1.0"
description = ""
authors = ["Dilip Sharma <dilip.sharma@ishafoundation.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.89.1"}
locust = "^2.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
